2006-09-03  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/utils.c: Save All button is also active when only one file is
                changed(improves usability).


2006-09-02  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c, src/search.c:
   Escape special characters when shown in the status window after
   "Replace All" or replacing a selection.
   Set the focus to the replace entry widget when pressing the
   tabulator key in the find entry widget in the replace dialog.
   Set the focus to the find entry widget when pressing the tabulator
   key in the directory entry widget in the FIF dialog.


2006-09-02  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c, src/sci_cb.c, src/main.c:
   Fixed C89 variable declaration and two sign comparison warnings.
 * src/document.c, src/document.h: Add document_get_current().
 * src/msgwindow.c:
   Use parse_file_line() for grep and compiler error messages.
   Add error message support for D, also for the GDC frontend.


2006-09-01  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c, src/dialogs.c, src/prefs.c, src/callbacks.c,
   src/interface.c, geany.glade: Fixed some typos.
 * src/filetypes.c, src/highlighting.c, src/keybindings.c,
   src/sci_cb.c, data/filetypes.html, data/filetype_extensions.conf,
   src/callbacks.c, src/msgwindow.c:
   Split filetype PHP/HTML into PHP and HTML.


2006-09-01  Frank Lanitz  <frank@frank.uvena.de>

 * configure.in, po/vi.po:
   Added Vietnamese translation (Thanks Clytie Siddall).
 * THANKS, src/about.c: Added translator credits.


2006-08-31  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/msgwindow.c, data/filetypes.ferite:
   Improved parsing compiler messages when using the ferite compiler.
   Added some primitives and improved compiler settings for Ferite.


2006-08-30  Enrico Tröger  <enrico.troeger@uvena.de>

 * configure.in, src/callbacks.c, src/geany.h, src/main.c:
   Removed the whole FIFO code and replaced it with support for